# tilematrix

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.conda/: conda-environment.yaml  meta.yaml
.github/workflows/: conda-build-test.yml  conda-environment.yaml  conda-publish.yml  python-package.yml  python-publish.yml
doc/: examples.md  tilematrix.md  tilematrix_io.md
src/: __init.py__  tilematrix.py  tilematrix_io.py
test/: conftest.py  requirements.txt  test_cli.py  test_custom_grids.py  test_dump_load.py  test_geometries.py  test_grids.py  test_helper_funcs.py  test_matrix_shapes.py  test_shapes.py  test_tile.py  test_tile_shapes.py  test_tilepyramid.py  tests.py
test/testdata/: dummy1.tif  dummy2.tif
tilematrix/: __init__.py  _conf.py  _exceptions.py  _funcs.py  _grid.py  _tile.py  _tilepyramid.py  _types.py  _utm.py  _utm_coefs.py  formats.py  io.py  tilematrix.py
tilematrix/tmx/: main.py
